<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/form_simpleProduct_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/productName"
        android:inputType="textCapWords|textShortMessage"/>

    <EditText
        android:id="@+id/form_simpleProduct_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_simpleProduct_amount"
        android:inputType="numberDecimal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/info_recipeDialog"/>


</LinearLayout>