<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >


    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryLight"
        android:gravity="center"
        android:text="@string/updateItem"
        android:textColor="#ffffff"
        android:elevation="2dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_itemstock_productname"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="Selected Product"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="@string/itemStock_update_productTitle"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLaydialog_itemstock_actualamountLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/dialog_itemstock_maxAmountLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/dialog_itemstock_actualamount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stock_minTxt"
            android:inputType="numberDecimal"
           />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dialog_itemstock_maxAmountLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textInputLaydialog_itemstock_actualamountLayout"
        app:layout_constraintTop_toBottomOf="@+id/dialog_itemstock_productname">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/dialog_itemstock_maxamount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stock_maxTxt"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>